Closed
Bug 93147
Opened 24 years ago
Closed 24 years ago
NotReached Assertions when selecting text widget in a table during editor command updating.
Categories
(Core :: DOM: Editor, defect, P2)
Core
DOM: Editor
Tracking
()
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: kinmoz, Assigned: kinmoz)
Details
(Whiteboard: [fix checked into trunk][fix not in 0.9.2 branch])
Attachments
(2 files)
|
243 bytes,
text/html
|
Details | |
|
967 bytes,
patch
|
Details | Diff | Splinter Review |
Using my MOZILLA_0_9_2_BRANCH and trunk builds, I get a ton of assertions if I
pass over a text widget in a table, while selecting content:
###!!! ASSERTION: nsContentIterator::NextNode() : no parent found: 'Not Reached'
, file x:\mozilla\content\base\src\nsContentIterator.cpp, line 562
###!!! Break: at file x:\mozilla\content\base\src\nsContentIterator.cpp, line
562
Here's the stack to the first assertion:
NTDLL! 77fa018c()
nsDebug::Assertion(const char * 0x02106c60, const char * 0x100e3150, const char
* 0x02106c2c, int 562) line 290 + 13 bytes
nsDebug::NotReached(const char * 0x02106c60, const char * 0x02106c2c, int 562)
line 452 + 22 bytes
nsContentIterator::NextNode(nsCOMPtr<nsIContent> * 0x0485f2d4) line 562 + 21
bytes
nsContentIterator::Next(nsContentIterator * const 0x0485f2c8) line 675
nsHTMLEditor::GetInlinePropertyBase(nsIAtom * 0x00dd5cb0, const nsAString *
0x00000000, const nsAString * 0x00000000, int * 0x0012d978, int * 0x0012d988,
int * 0x0012d98c, nsAString * 0x00000000) line 1002 + 35 bytes
nsHTMLEditor::GetInlineProperty(nsHTMLEditor * const 0x04d3be90, nsIAtom *
0x00dd5cb0, const nsAString & {...}, const nsAString & {...}, int * 0x0012d978,
int * 0x0012d988, int * 0x0012d98c) line 1033
nsStyleUpdatingCommand::GetCurrentState(nsIEditorShell * 0x04e47128, const char
* 0x040798f8, int & 1235564) line 334 + 78 bytes
nsBaseStateUpdatingCommand::UpdateCommandState(nsBaseStateUpdatingCommand *
const 0x04a1093c, const nsAString & {...}, nsISupports * 0x04e47128) line 172 +
35 bytes
nsBaseStateUpdatingCommand::IsCommandEnabled(nsBaseStateUpdatingCommand * const
0x04a10930, const nsAString & {...}, nsISupports * 0x04e47128, int * 0x0012dcd4)
line 148
nsControllerCommandManager::IsCommandEnabled(nsControllerCommandManager * const
0x04a10c98, const nsAString & {...}, nsISupports * 0x04e47128, int * 0x0012dcd4)
line 115 + 35 bytes
nsComposerController::IsCommandEnabled(nsComposerController * const 0x04b00678,
const nsAString & {...}, int * 0x0012dcd4) line 212
XPTC_InvokeByIndex(nsISupports * 0x04b00678, unsigned int 3, unsigned int 2,
nsXPTCVariant * 0x0012dcc4) line 139
XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode
CALL_METHOD) line 1881 + 42 bytes
XPC_WN_CallMethod(JSContext * 0x0487aed0, JSObject * 0x04a77a20, unsigned int 1,
long * 0x04757128, long * 0x0012def8) line 1252 + 11 bytes
js_Invoke(JSContext * 0x0487aed0, unsigned int 1, unsigned int 0) line 807 + 23
bytes
js_Interpret(JSContext * 0x0487aed0, long * 0x0012ec9c) line 2702 + 15 bytes
js_Invoke(JSContext * 0x0487aed0, unsigned int 1, unsigned int 2) line 824 + 13
bytes
js_InternalInvoke(JSContext * 0x0487aed0, JSObject * 0x03764518, long 58082600,
unsigned int 0, unsigned int 1, long * 0x0012ee74, long * 0x0012edc4) line 896 +
20 bytes
JS_CallFunctionValue(JSContext * 0x0487aed0, JSObject * 0x03764518, long
58082600, unsigned int 1, long * 0x0012ee74, long * 0x0012edc4) line 3320 + 31
bytes
nsJSContext::CallEventHandler(nsJSContext * const 0x045298a0, void * 0x03764518,
void * 0x03764528, unsigned int 1, void * 0x0012ee74, int * 0x0012ee70, int 0)
line 941 + 33 bytes
nsJSEventListener::HandleEvent(nsJSEventListener * const 0x04b379f0, nsIDOMEvent
* 0x0485e8fc) line 139 + 57 bytes
nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x04b37a58,
nsIDOMEvent * 0x0485e8fc, nsIDOMEventTarget * 0x037c6ea0, unsigned int 32,
unsigned int 7) line 1161 + 20 bytes
nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x04b37978,
nsIPresContext * 0x04ca2160, nsEvent * 0x0012f920, nsIDOMEvent * * 0x0012f840,
nsIDOMEventTarget * 0x037c6ea0, unsigned int 7, nsEventStatus * 0x0012f948) line
2131 + 36 bytes
nsXULElement::HandleDOMEvent(nsXULElement * const 0x037c6e98, nsIPresContext *
0x04ca2160, nsEvent * 0x0012f920, nsIDOMEvent * * 0x0012f840, unsigned int 1,
nsEventStatus * 0x0012f948) line 3635
nsXULCommandDispatcher::UpdateCommands(nsXULCommandDispatcher * const
0x034ce9e0, const nsAString & {...}) line 370
GlobalWindowImpl::UpdateCommands(GlobalWindowImpl * const 0x046aecec, const
nsAString & {...}) line 2419
nsInterfaceState::CallUpdateCommands(const nsAString & {...}) line 295
nsInterfaceState::TimerCallback() line 256 + 25 bytes
nsInterfaceState::Notify(nsInterfaceState * const 0x049dabb4, nsITimer *
0x04ad8a08) line 329
nsTimer::Fire() line 200
FireTimeout(HWND__ * 0x00000000, unsigned int 275, unsigned int 24084, unsigned
long 6211962) line 78
USER32! 77e12e98()
USER32! 77e13158()
USER32! 77e15824()
nsAppShellService::Run(nsAppShellService * const 0x00d46178) line 426
main1(int 1, char * * 0x00358028, nsISupports * 0x00000000) line 1240 + 32 bytes
main(int 1, char * * 0x00358028) line 1544 + 37 bytes
mainCRTStartup() line 338 + 17 bytes
KERNEL32! 77e97d08()
I just attatched a small patch that prevents the assertions from happening.
Can I get a review from brade and a super review from sfraser?
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla0.9.4
Comment 5•24 years ago
|
||
sr=sfraser
Fix checked into trunk:
mozilla/editor/base/nsHTMLEditorStyle.cpp revision 1.8
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: have fix; need sr= → [fix checked into trunk][fix not in 0.9.2 branch]
You need to log in
before you can comment on or make changes to this bug.
Description
•