Fix for bug #93147: NotReached Assertions when selecting text widget in a table Modified nsHTMLEditor::GetInlinePropertyBase() to bail out of iterator loop if current node is the body.

r=brade@netscape.com  sr=sfraser@netscape.com